Do not clear mouse_pressed_ on MouseLeave

On Linux, when pressed button and move out of page, we get a MouseLeave
event when cross the window boundary. In that case, we don't want to
reset the mouse_pressed_. Because we should still fire mousemove event
when button down and move out of window. Reset mouse_pressed_ here
causes selection stop when drag selecting and move out of window.

Since we always clear mouse_pressed_ on mousemove event with no button
down, we don't need to reset it here. So just return kNotHandled.

Bug: 750455
Change-Id: Iaecc0245a3d45e593f438d56081a6e51984390ed
Reviewed-on: https://chromium-review.googlesource.com/902772
Reviewed-by: Navid Zolghadr <nzolghadr@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535786}
Former-commit-id: 7a6ebf35422b7320932f8a9d644367d04487efc2